<resources>
    <string name="app_name">Library</string>
    <string name="remember_me">Remember Me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="question">Question</string>
    <string name="Exit">Are you sure you want to exit ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="invalid_email">Not a valid email.</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="Enter_email">Please enter email !</string>
    <string name="Enter_Password">Please enter password !</string>
    <string name="Password_Must_Be">Password must be >8 characters.</string>
    <string name="error">Error</string>
    <string name="Check_Email_Password">"Email and password is incorrect. "</string>
    <string name="Ok">OK</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="user">Users</string>
    <string name="author">Authors</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Username">Username</string>
    <string name="AccessType">Access Type</string>
    <string name="BirthDate">Birth Date</string>
    <string name="DeathDate">Death Date</string>
    <string name="About">About</string>
    <string name="CategoryName">Category Name</string>
    <string name="new_user">New User</string>
    <string name="show_users_list">Show Users</string>
    <string name="search">Search</string>
    <string name="new_author">New Author</string>
    <string name="show_authors_list">Show Authors</string>
    <string name="new_category">New Category</string>
    <string name="show_categories_list">Show Category</string>
    <string name="Category">Category</string>
    <string name="logout">Logout</string>
    <string name="logoutmessage">Are you sure you want to logout ?</string>
    <string name="categories_info">Categories Information</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="Enter_Category_Name">Enter Category Name</string>
    <string name="Info">Info</string>
    <string name="Added_Successfully">Added Successfully</string>
    <string name="erro_message">Unexpected Error Occured Please Contact Resposible Person</string>
    <string name="Updated_Successfully">Updated Successfully</string>
    <string name="author_information">Author Information</string>
    <string name="Enter_First_Name">Enter First Name.</string>
    <string name="Enter_Last_Name">Enter Last Name.</string>
    <string name="Enter_Birth_Date">Enter Birth Date.</string>
    <string name="Enter_Death_Date">Enter Death Date.</string>
    <string name="Enter_Details">Enter Details About Author.</string>
    <string name="user_information">User Information</string>
    <string name="Enter_Phone_Number">Enter Phone Number.</string>
    <string name="Enter_Email">Enter Email.</string>
    <string name="Enter_Username">Enter Username.</string>
    <string name="Enter_User_Password">Enter Password.</string>
    <string name="Admin">Admin</string>
    <string name="User">User</string>
    <string name="Select_Access_Type">Select Access Type</string>
    <string name="Create_New_Account">Create Account</string>
    <string name="Create_Account">Create Account</string>
    <string name="Fill_information">Fill Information Below :</string>
    <string name="Account_Created_Successfully">Account Created Successfully</string>
    <string name="User_no">User No</string>
    <string name="access_type">Access Type</string>
    <string name="categories">Categories</string>
    <string name="Books">Books</string>
    <string name="new_book">New Book</string>
    <string name="show_books">Show Books</string>
    <string name="Author">Author</string>
    <string name="BookName">Book Name</string>
    <string name="ReleaseDate">Release Date</string>
    <string name="Link">Link</string>
    <string name="book_information">Book_Information</string>
    <string name="Enter_Book_Name">Enter Book Name.</string>
    <string name="Enter_Release_Date">Enter Release Date</string>
    <string name="Enter_Link">Enter Link.</string>
    <string name="Enter_Details_About_Book">Enter Details About Book.</string>
    <string name="welcome">WELCOME</string>
</resources>